--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                     <img src="Images/Icons/Kiwi List Icon.png" class="appsImage">
                     <div class="Hspacer15"><p></p></div>
                     <div class="appInfo">
-                        <h2 class="comingSoonBanner">Coming February 15: Pre-order Now</h2>
+                        <h2 class="preorderBanner">Coming February 15: Pre-order Now</h2>
                         <h1 class="infoSubtextApp">Kiwi List</h1>
                         <br>
                         <h4 class="infoSubtextApp">
@@ -404,7 +404,7 @@
                 <div>
                     <img src="Images/Icons/Kiwi List Icon.png" class="mobileAppsImage">
                     <div class="mobileBannerContainter">
-                            <h2 class="mobileComingSoonBanner">Coming February 15: Pre-order Now</h2>
+                            <h2 class="mobilePreorderBanner">Coming February 15: Pre-order Now</h2>
                         </div>
                     <div class="appInfo">
                         <h1 class="infoSubtextApp">Kiwi List</h1>
