--- a/index.html
+++ b/index.html
@@ -102,8 +102,11 @@
 
 
         <a href="index.html">
-            <div class="imageBox">
+            <div class="show-mobile">
                 <img src="DoorHinge Apps Banner.png" alt="DoorHinge Apps" class="titleImage">
+            </div>
+            <div class="hide-mobile">
+                <img src="DoorHinge Apps Banner Desktop.png" alt="DoorHinge Apps" class="titleImage">
             </div>
         </a>
 
