--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     </head>
 
-    <body>
+    <body style="background-color: #B93ECD">
         <meta name="viewport" content="width=device-width, initial-scale=1">
           <section class="top-nav">
             <div>
