--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                             </div>
                             <div class="Hspacer20"><p></p></div>
                             <div class="fillButtons">
-                                <a href="https://doorhingeapps.com/the-caedmon-app/" class="fillButtonText">
+                                <a href="the-caedmon-app.html" class="fillButtonText">
                                     Learn More
                                 </a>
                             </div>
@@ -353,7 +353,7 @@
                             </div>
                             <div class="Hspacer20"><p></p></div>
                             <div class="fillButtons">
-                                <a href="https://doorhingeapps.com/the-caedmon-app/" class="fillButtonText">
+                                <a href="the-caedmon-app.html" class="fillButtonText">
                                     Learn More
                                 </a>
                             </div>
