--- a/naa-eula.html
+++ b/naa-eula.html
@@ -11,8 +11,8 @@
 
           gtag('config', 'G-0T96P7BYKY');
         </script>
-        <title>EULA | The Caedmon App</title>
-        <link rel="icon" type="image/x-icon" href="caedmonappfavicon.png">
+        <title>EULA | No Athlete Alone</title>
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" type="text/css" media="all" type="text/css" href="css/naa.css" />
