--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <div class="infoText">
             <div class="centerButtons">
                 <div class="fillButtons">
-                    <a href="https://doorhingeapps.com/shop/" class="fillButtonText">
+                    <a href="https://www.etsy.com/listing/1361313416/doorhinge-parkour-t-shirt-yellow?ref=listings_manager_grid" class="fillButtonText">
                         Check it Out
                     </a>
                 </div>
