--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                             </div>
                             <div class="Hspacer20"><p></p></div>
                             <div class="fillButtons">
-                                <a href="https://kiwiliwt.app" class="fillButtonText">
+                                <a href="https://kiwilist.app" class="fillButtonText">
                                     Learn More
                                 </a>
                             </div>
@@ -431,7 +431,7 @@
                         -->
                             <div class="Hspacer20"><p></p></div>
                             <div class="fillButtons">
-                                <a href="https://kiwiliwt.app" class="fillButtonText">
+                                <a href="https://kiwilist.app" class="fillButtonText">
                                     Learn More
                                 </a>
                             </div>
