--- a/Contributors.html
+++ b/Contributors.html
@@ -121,7 +121,7 @@
                 Caedmon Myers
             </h2>
             <div class="peopleBox">
-                <img src="Images/people/caedmon.webp">
+                <img src="Images/People/caedmon.webp">
             </div>
             <h4 class="infoSubtextLeft">
                 Hello humans. I’m a 14 year old app developer from Mars (it’s true). I started DoorHinge Apps to keep your suffering as weak mindless humans to a minumum.
@@ -195,7 +195,7 @@
                 Nevaeh Skinner
             </h2>
             <div class="peopleBox">
-                <img src="Images/people/nevaeh.png">
+                <img src="Images/People/nevaeh.png">
             </div>
             <h4 class="infoSubtextLeft">
                 
