--- a/contact.html
+++ b/contact.html
@@ -13,16 +13,18 @@
         </script>
         
         <title>Contact | DoorHinge Apps</title>
+        <meta name="description" content="Hello humans! You can find the contact info for DoorHinge Apps here.">
+
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" type="text/css" media="all" type="text/css" href="css/base.css" />
+        <link rel="stylesheet" type="text/css" media="all" type="text/css" href="css/contact.css" />
         <!--
         <link rel="stylesheet" type="text/css" media="screen and (min-width:    0px) and (max-width: 400px)" href="css/400px.css" />
         <link rel="stylesheet" type="text/css" media="screen and (min-width:  340px) and (max-width: 639px)" href="css/639px.css" />
         <link rel="stylesheet" type="text/css" media="screen and (min-width:  640px) and (max-width: 999px)" href="css/999px.css" />
         -->
-        <link rel="stylesheet" type="text/css" media="screen and (min-width: 401px)" href="css/base.css" />
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 401px)" href="css/contact.css" />
 
     </head>
 
@@ -130,6 +132,30 @@
                     support@doorhingeapps.com
                 </h3>
             </a>
+        </div>
+
+        <br>
+
+        <div class="infoText">
+            <form action="https://formbold.com/s/9kBG6" method="POST">
+                <div>
+                    <br>
+                    <label class="infoSubtextLeft">
+                        Your email:
+                        <p class="formNewLine">---</p>
+                        <input type="email" name="email" class="formEmail">
+                      </label>
+                </div>
+                <br>
+                <div>
+                    <label class="infoSubtextLeft">
+                        Your message:
+                        <p class="formNewLine">---</p>
+                        <textarea name="message" class="formMessage"></textarea>
+                    </label>
+                </div>
+              <button type="submit" class="formButtons">Send</button>
+            </form>
         </div>
         
         <br>
