--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,8 @@
         </script>
 
         <title>News | DoorHinge Apps</title>
+        <meta name="description" content="View updates, new info, and more about our apps.">
+
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -33,7 +35,7 @@
                 <a href="https://doorhingeapps.com">
                     <div class="altHStack">
                         <div class="logo">
-                            <img src="DoorHinge Apps Logo Circle.png" alt="DoorHinge Apps Logo">
+                            <img src="Images/logo animation.gif" alt="DoorHinge Apps Logo" class="animatedLogo">
                         </div>
                     
                         <h1 class="navBarTitle">
@@ -104,10 +106,10 @@
 
         <a href="index.html">
             <div class="show-mobile">
-                <img src="DoorHinge Apps Banner.png" alt="DoorHinge Apps" class="titleImage">
+                <img src="Mobile Animation.gif" alt="DoorHinge Apps" class="titleImage">
             </div>
             <div class="hide-mobile">
-                <img src="DoorHinge Apps Banner Desktop.png" alt="DoorHinge Apps" class="titleImage">
+                <img src="Desktop Animation.gif" alt="DoorHinge Apps" class="titleImage">
             </div>
         </a>
 
@@ -125,6 +127,40 @@
 
         <div class="newsItem">
             <div class="infoText">
+                <!--Post date-->
+                <p class="blogDate">Posted: 1/6/23</p>
+                <!--Title for the post-->
+                <h2 class="infoSubtextLeft">Kiwi List App</h2>
+                <!--Body of post-->
+                <h4 class="infoSubtextLeft">
+                    Hello puny earthlings! We are excited to announce that our new app, Kiwi List is available for pre-order on the App Store for iOS. It will be released on February 15th.
+                </h4>
+
+                <!--Links on post-->
+                <div class="centerButtons">
+                    <div class="fillButtons">
+                        <a href="https://arc.net/e/D2AF4642-E6F4-4E13-B14D-1607318D57E0" class="fillButtonText">
+                            Pre-order
+                        </a>
+                    </div>
+                    <p class="Hspacer15"></p>
+                    <div class="fillButtons">
+                        <a href="https://kiwilist.app" class="fillButtonText">
+                            Learn More
+                        </a>
+                    </div>
+                </div>
+                <!--End of links on post-->
+            </div>
+        </div>
+
+        <br>
+
+
+        <div class="newsItem">
+            <div class="infoText">
+                <!--Post date-->
+                <p class="blogDate">Posted: 1/2/23</p>
                 <!--Title for the post-->
                 <h2 class="infoSubtextLeft">DoorHinge Parkour: Version 4.0</h2>
                 <!--Body of post-->
