--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         </script>
 
         <title>DoorHinge Apps</title>
+        <meta name="description" content="Hello humans! We are a software development team from Mars. We have developed several apps including DoorHinge Parkour and No Athlete Alone.">
+        
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -33,7 +35,7 @@
                 <a href="https://doorhingeapps.com">
                     <div class="altHStack">
                         <div class="logo">
-                            <img src="DoorHinge Apps Logo Circle.png" alt="DoorHinge Apps Logo">
+                            <img src="Images/logo animation.gif" alt="DoorHinge Apps Logo" class="animatedLogo">
                         </div>
                     
                         <h1 class="navBarTitle">
@@ -104,10 +106,10 @@
 
         <a href="index.html">
             <div class="show-mobile">
-                <img src="DoorHinge Apps Banner.png" alt="DoorHinge Apps" class="titleImage">
+                <img src="Mobile Animation.gif" alt="DoorHinge Apps" class="titleImage">
             </div>
             <div class="hide-mobile">
-                <img src="DoorHinge Apps Banner Desktop.png" alt="DoorHinge Apps" class="titleImage">
+                <img src="Desktop Animation.gif" alt="DoorHinge Apps" class="titleImage">
             </div>
         </a>
 
@@ -453,6 +455,7 @@
                 <div class="fillButtons">
                     <a href="blog.html" class="fillButtonText">
                         Blog
+    font-family: Helvetica;
                     </a>
                 </div>
                 <div class="Hspacer20"><p></p></div>
