--- a/blog.html
+++ b/blog.html
@@ -128,6 +128,37 @@
         <div class="newsItem">
             <div class="infoText">
                 <!--Post date-->
+                <p class="blogDate">Posted: 1/18/23</p>
+                <!--Title for the post-->
+                <h2 class="infoSubtextLeft">Congressional App Challenge</h2>
+                <!--Body of post-->
+                <h4 class="infoSubtextLeft">
+                    Hello humans! We are so excited to announce that DoorHinge Parkour won the Congressional App Challenge for Oklahoma District 1. We will release more details soon. You should download our app for free on the iOS App Store.
+                </h4>
+
+                <!--Links on post-->
+                <div class="centerButtons">
+                    <div class="fillButtons">
+                        <a href="https://apps.apple.com/us/app/doorhinge-parkour/id1636750816" class="fillButtonText">
+                            Download
+                        </a>
+                    </div>
+                    <p class="Hspacer15"></p>
+                    <div class="fillButtons">
+                        <a href="https://doorhingeparkour.com" class="fillButtonText">
+                            Learn More
+                        </a>
+                    </div>
+                </div>
+                <!--End of links on post-->
+            </div>
+        </div>
+
+        <br>
+
+        <div class="newsItem">
+            <div class="infoText">
+                <!--Post date-->
                 <p class="blogDate">Posted: 1/6/23</p>
                 <!--Title for the post-->
                 <h2 class="infoSubtextLeft">Kiwi List App</h2>
