--- a/index.html
+++ b/index.html
@@ -212,7 +212,9 @@
                 <div>
                     <img src="Images/Icons/DoorHinge Parkour Icon.png" class="mobileAppsImage">
                     <div class="mobileBannerContainter">
-                            <h2 class="mobileComingSoonBanner">Version 4.0 Coming Soon</h2>
+                            <!--<h2 class="mobileComingSoonBanner">Version 4.0 Coming Soon</h2>-->
+                            <br>
+                            <img src="CAC Banner Alt.png" alt="Winner of the 2022 Congressional App Challenge. Oklahoma District 1">
                         </div>
                     <div class="appInfo">
                         <h1 class="infoSubtextApp">DoorHinge Parkour</h1>
@@ -500,7 +502,7 @@
             </div>
             <div class="copyright">
                 <h5>
-                    ©2022 DoorHinge Apps
+                    ©2023 DoorHinge Apps
                 </h5>
             </div>
             <br>
