--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
 
     </head>
 
-    <body>
+    <body style="background-color: #A487FF">
         <meta name="viewport" content="width=device-width, initial-scale=1">
           <section class="top-nav">
             <div>
@@ -65,7 +65,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://doorhingeapps.com/naa" class="whiteButtonText">
+                    <a href="https://noathletealone.com" class="whiteButtonText">
                         No Athlete Alone
                     </a>
                 </li>
@@ -106,10 +106,10 @@
 
         <a href="index.html">
             <div class="show-mobile">
-                <img src="Mobile Animation.gif" alt="DoorHinge Apps" class="titleImage">
+                <img src="Images/banners/mobile.png" alt="DoorHinge Apps" class="titleImage">
             </div>
             <div class="hide-mobile">
-                <img src="Desktop Animation.gif" alt="DoorHinge Apps" class="titleImage">
+                <img src="Images/banners/desktop.png" alt="DoorHinge Apps" class="titleImage">
             </div>
         </a>
 
@@ -221,39 +221,7 @@
         <hr>
         <br>
 
-        <div class="footer">
-            <div class="doorhingeapps">
-                <a href="index.html" class="whiteButtonText">
-                    <h5>
-                        DoorHinge Apps
-                    </h5>
-                </a>
-            </div>
-            <div class="altHStack">
-                <div class="socials">
-                    <a href="https://youtube.com/@doorhingeparkour">
-                        <img src="socials/YouTube Icon.png" class="socialIcon">
-                    </a>
-                    <a href="https://tiktok.com/@doorhingeparkour">
-                        <img src="socials/TikTok Icon.png" class="socialIcon">
-                    </a>
-                    <a href="https://www.etsy.com/shop/DoorHingeApps?listing_id=1361313416">
-                        <img src="socials/Etsy Icon.png" class="socialIcon">
-                    </a>
-                    <a href="mailto:support@doorhingeapps.com">
-                        <img src="socials/Email Icon.png" class="socialIcon">
-                    </a>
-                    <a href="https://www.buymeacoffee.com/caedmonm">
-                        <img src="socials/Buy me a Coffee Icon.png" class="socialIcon">
-                    </a>
-                </div>
-            </div>
-            <div class="copyright">
-                <h5>
-                    ©2023 DoorHinge Apps
-                </h5>
-            </div>
-            <br>
+        <embed type="text/html" src="footer.html" width="100%" height="200">
             
     </body>
 </div>
