--- a/naa-eula.html
+++ b/naa-eula.html
@@ -61,7 +61,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://doorhingeapps.com/naa" class="whiteButtonText">
+                    <a href="https://noathletealone.com" class="whiteButtonText">
                         No Athlete Alone
                     </a>
                 </li>
