--- a/naa.html
+++ b/naa.html
@@ -12,7 +12,9 @@
           gtag('config', 'G-7747XZXY15');
         </script>
 
-        <title>DoorHinge Apps</title>
+        <title>NAA | DoorHinge Apps</title>
+        <meta name="description" content="No Athlete Alone is our app designed to help young athletes with their mental health. We provide a platform for High School and College athletes to seek help from online resources as well as tracking things like meditations, prayers, and your mood. No Athlete Alone Plus allows you to track your water intake, chat with a counsellor, and add custom records.">
+
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -63,7 +65,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://doorhingeapps.com/naa" class="whiteButtonText">
+                    <a href="https://noathletealone.com" class="whiteButtonText">
                         No Athlete Alone
                     </a>
                 </li>
@@ -165,7 +167,7 @@
             </div>
             <div class="copyright">
                 <h5>
-                    ©2022 DoorHinge Apps
+                    ©2023 DoorHinge Apps
                 </h5>
             </div>
             <br>
