--- a/thecaedmonapp-privacypolicy.html
+++ b/thecaedmonapp-privacypolicy.html
@@ -61,7 +61,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://doorhingeapps.com/naa" class="whiteButtonText">
+                    <a href="https://noathletealone.com" class="whiteButtonText">
                         No Athlete Alone
                     </a>
                 </li>
@@ -245,36 +245,7 @@
         <hr>
         <br>
 
-        <div class="footer">
-            <div class="doorhingeapps">
-                <a href="https://doorhingeapps.com" class="whiteButtonText">
-                    <h5>
-                        DoorHinge Apps
-                    </h5>
-                </a>
-            </div>
-            <div class="altHStack">
-                <div class="socials">
-                    <a href="https://youtube.com/@doorhingeparkour">
-                        <img src="socials/YouTube Icon.png" class="socialIcon">
-                    </a>
-                    <a href="https://tiktok.com/@doorhingeparkour">
-                        <img src="socials/TikTok Icon.png" class="socialIcon">
-                    </a>
-                    <a href="https://www.etsy.com/shop/DoorHingeApps?listing_id=1361313416">
-                        <img src="socials/Etsy Icon.png" class="socialIcon">
-                    </a>
-                    <a href="mailto:support@doorhingeapps.com">
-                        <img src="socials/Email Icon.png" class="socialIcon">
-                    </a>
-                </div>
-            </div>
-            <div class="copyright">
-                <h5>
-                    ©2022 DoorHinge Apps
-                </h5>
-            </div>
-            <br>
+        <embed type="text/html" src="footer.html" width="100%" height="200">
             
     </body>
 </div>
