--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
                     </a>
                 </li>
                 <li>
+                    <a href="https://themaclibrary.com" class="whiteButtonText">
+                        The Mac Library
+                    </a>
+                </li>
+                <li>
                     <a href="https://noathletealone.com" class="whiteButtonText">
                         No Athlete Alone
                     </a>
@@ -249,6 +254,75 @@
             <br>
         </div>
 
+        <br>
+        
+        <div class="infoText">
+            <br>
+            <div class="hide-mobile">
+                <div class="altHStack">
+                    <img src="Images/Icons/App Library Icon.png" class="appsImage">
+                    <div class="Hspacer15"><p></p></div>
+                    <div class="appInfo">
+                        <h2 class="comingSoonBanner">Coming Soon</h2>
+                        <div class="mobileBannerContainter">
+                            <!--<h2 class="mobileComingSoonBanner">Version 4.0 Coming Soon</h2>-->
+                            <br>
+                        </div>
+                        <h1 class="infoSubtextApp">The Mac Library</h1>
+                        <br>
+                        <h4 class="infoSubtextApp">
+                            Hey humans! It's another app from us! We are thrilled to introduce The Mac Library, the app library Apple should have made for your Mac. Tired of Launchpad's shenanigans? There's an app for that! Now I know you're wondering, "How could this possibly get better?" Well, the answer is simple. It's free.
+                        </h4>
+                        <div class="centerButtons">
+                            <div class="fillButtons">
+                                <a href="https://themaclibrary.com" class="fillButtonText">
+                                    Join Beta
+                                </a>
+                            </div>
+                            <div class="Hspacer20"><p></p></div>
+                            <div class="fillButtons">
+                                <a href="https://themaclibrary.com" class="fillButtonText">
+                                    Learn More
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="show-mobile">
+                <div>
+                    <img src="Images/Icons/App Library Icon.png" class="mobileAppsImage">
+                    <div class="mobileBannerContainter">
+                            <h2 class="mobileComingSoonBanner">Coming Soon</h2>
+                            <br>
+                        </div>
+                    <div class="appInfo">
+                        <h1 class="infoSubtextApp">The Mac Library</h1>
+                        <br>
+                        <h4 class="infoSubtextApp">
+                            Hey humans! It's another app from us! We are thrilled to introduce The Mac Library, the app library Apple should have made for your Mac. Tired of Launchpad's shenanigans? There's an app for that! Now I know you're wondering, "How could this possibly get better?" Well, the answer is simple. It's free.
+                        </h4>
+                        <div class="centerButtons">
+                            <div class="fillButtons">
+                                <a href="https://themaclibrary.com" class="fillButtonText">
+                                    Join Beta
+                                </a>
+                            </div>
+                            <div class="Hspacer20"><p></p></div>
+                            <div class="fillButtons">
+                                <a href="https://themaclibrary.com" class="fillButtonText">
+                                    Learn More
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <br>
+        </div>
+        
         <br>
 
         <div class="infoText">
