--- a/404.html
+++ b/404.html
@@ -545,6 +545,11 @@
                     </a>
                 </li>
                 <li>
+                    <a href="https://themaclibrary.com" class="whiteButtonText">
+                        The Mac Library
+                    </a>
+                </li>
+                <li>
                     <a href="https://doorhingeapps.com/naa" class="whiteButtonText">
                         No Athlete Alone
                     </a>
