--- a/contact.html
+++ b/contact.html
@@ -65,6 +65,11 @@
                     </a>
                 </li>
                 <li>
+                    <a href="https://themaclibrary.com" class="whiteButtonText">
+                        The Mac Library
+                    </a>
+                </li>
+                <li>
                     <a href="https://noathletealone.com" class="whiteButtonText">
                         No Athlete Alone
                     </a>
