--- a/the-caedmon-app.html
+++ b/the-caedmon-app.html
@@ -62,6 +62,11 @@
                     </a>
                 </li>
                 <li>
+                    <a href="https://themaclibrary.com" class="whiteButtonText">
+                        The Mac Library
+                    </a>
+                </li>
+                <li>
                     <a href="https://noathletealone.com" class="whiteButtonText">
                         No Athlete Alone
                     </a>
