--- a/thecaedmonapp-eula.html
+++ b/thecaedmonapp-eula.html
@@ -66,6 +66,11 @@
                     </a>
                 </li>
                 <li>
+                    <a href="https://themaclibrary.com" class="whiteButtonText">
+                        The Mac Library
+                    </a>
+                </li>
+                <li>
                     <a href="https://kiwilist.app" class="whiteButtonText">
                         Kiwi List
                     </a>
