--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <img src="Images/Icons/App Library Icon.png" class="appsImage">
                     <div class="Hspacer15"><p></p></div>
                     <div class="appInfo">
-                        <h2 class="comingSoonBanner">Coming Soon</h2>
+                        <h2 class="comingSoonBanner">New Release</h2>
                         <div class="mobileBannerContainter">
                             <!--<h2 class="mobileComingSoonBanner">Version 4.0 Coming Soon</h2>-->
                             <br>
@@ -275,7 +275,7 @@
                         </h4>
                         <div class="centerButtons">
                             <div class="fillButtons">
-                                <a href="https://themaclibrary.com" class="fillButtonText">
+                                <a href="https://github.com/themaclibrary/themaclibrary.github.io/releases" class="fillButtonText">
                                     Join Beta
                                 </a>
                             </div>
@@ -294,7 +294,7 @@
                 <div>
                     <img src="Images/Icons/App Library Icon.png" class="mobileAppsImage">
                     <div class="mobileBannerContainter">
-                            <h2 class="mobileComingSoonBanner">Coming Soon</h2>
+                            <h2 class="mobileComingSoonBanner">New Release</h2>
                             <br>
                         </div>
                     <div class="appInfo">
@@ -305,7 +305,7 @@
                         </h4>
                         <div class="centerButtons">
                             <div class="fillButtons">
-                                <a href="https://themaclibrary.com" class="fillButtonText">
+                                <a href="https://github.com/themaclibrary/themaclibrary.github.io/releases" class="fillButtonText">
                                     Join Beta
                                 </a>
                             </div>
