--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
           gtag('config', 'G-7747XZXY15');
         </script>
+        
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
+     crossorigin="anonymous"></script>
 
         <title>DoorHinge Apps</title>
         <meta name="description" content="Hello humans! We are a software development team from Mars. We have developed several apps including DoorHinge Parkour and No Athlete Alone.">
