--- a/index.html
+++ b/index.html
@@ -89,24 +89,21 @@
                 </li>
                 <li>
                     <div class="altHStack">
-                        <div class="socials">
-                            <a href="https://youtube.com/@doorhingeparkour">
-                                <img src="socials/YouTube Icon.png" class="socialIconMenu">
-                            </a>
-                            <a href="https://tiktok.com/@doorhingeparkour">
-                                <img src="socials/TikTok Icon.png" class="socialIconMenu">
-                            </a>
-                            <a href="https://www.etsy.com/shop/DoorHingeApps?listing_id=1361313416">
-                                <img src="socials/Etsy Icon.png" class="socialIconMenu">
-                            </a>
-                            <a href="mailto:support@doorhingeapps.com">
-                                <img src="socials/Email Icon.png" class="socialIconMenu">
-                            </a>
-                            <a href="https://www.buymeacoffee.com/caedmonm">
-                                <img src="socials/Buy me a Coffee Icon.png" class="socialIconMenu">
-                            </a>
-                        </div>
-                    </div>
+                <div>
+                    <a href="https://twitter.com/@doorhingeapps">
+                        <img src="socials/Twitter.svg" class="socialIconMenu">
+                    </a>
+                    <a href="https://mastodon.social/@doorhingeapps">
+                        <img src="socials/Mastodon.svg" class="socialIconMenu">
+                    </a>
+                    <a href="https://youtube.com/@doorhingeparkour">
+                        <img src="socials/Youtube.svg" class="socialIconMenu">
+                    </a>
+                    <a href="https://tiktok.com/@doorhingeparkour">
+                        <img src="socials/Tiktok.svg" class="socialIconMenu">
+                    </a>
+                </div>
+            </div>
                 </li>
             </ul>
           </section>
@@ -185,7 +182,7 @@
 <div id="mc_embed_signup">
     <form action="https://wordpress.us18.list-manage.com/subscribe/post?u=9e9edc9e6f504f674159739b7&amp;id=deb2b39b75&amp;f_id=00ad36e7f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self">
         <div id="mc_embed_signup_scroll">
-        <h2>Mailing List</h2>
+        <h2 class="infoSubtextLeft">Mailing List</h2>
 <div class="infoSubtextApp">
 	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
 </label>
@@ -211,8 +208,6 @@
 
         <br>
 
-        <br>
-        <hr>
         <br>
 
         <div>
@@ -592,9 +587,6 @@
         <hr>
         <br>
         
-        <embed type="text/html" src="footer.html" width="100%" height="200">
-        
-        <!--
         <div class="footer">
             <div class="doorhingeapps">
                 <a href="index.html" class="whiteButtonText">
@@ -604,21 +596,18 @@
                 </a>
             </div>
             <div class="altHStack">
-                <div class="socials">
+                <div>
+                    <a href="https://twitter.com/@doorhingeapps">
+                        <img src="socials/Twitter.svg" class="socialIcon">
+                    </a>
+                    <a href="https://mastodon.social/@doorhingeapps">
+                        <img src="socials/Mastodon.svg" class="socialIcon">
+                    </a>
                     <a href="https://youtube.com/@doorhingeparkour">
-                        <img src="socials/YouTube Icon.png" class="socialIcon" alt="YouTube">
+                        <img src="socials/Youtube.svg" class="socialIcon">
                     </a>
                     <a href="https://tiktok.com/@doorhingeparkour">
-                        <img src="socials/TikTok Icon.png" class="socialIcon" alt="TikTok">
-                    </a>
-                    <a href="https://www.etsy.com/shop/DoorHingeApps?listing_id=1361313416">
-                        <img src="socials/Etsy Icon.png" class="socialIcon" alt="Etsy">
-                    </a>
-                    <a href="mailto:support@doorhingeapps.com">
-                        <img src="socials/Email Icon.png" class="socialIcon" alt="Email">
-                    </a>
-                    <a href="https://www.buymeacoffee.com/caedmonm">
-                        <img src="socials/Buy me a Coffee Icon.png" class="socialIcon" alt="Buy Me A Coffee">
+                        <img src="socials/Tiktok.svg" class="socialIcon">
                     </a>
                 </div>
             </div>
@@ -629,7 +618,6 @@
             </div>
             <br>
         </div>
-        -->
     </body>
 </div>
 
