--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
         
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
      crossorigin="anonymous"></script>
+        
+        <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "g9w15u84m4");
+</script>
 
         <title>DoorHinge Apps</title>
         <meta name="description" content="Hello humans! We are a software development team from Mars. We have developed several apps including DoorHinge Parkour and No Athlete Alone.">
