--- a/index.html
+++ b/index.html
@@ -129,14 +129,7 @@
   <h1 class="infoSubtextLeft">¿Como te Sientes?</h1>
   <h4 class="infoSubtextLeft"> Yk, social media exists for a reason ↓ </h4>
   <div class="centerButtons">
-    <div class="HStack"> <a href="https://twitter.com/@doorhingeapps" class="otherFillButtons"> <img src="socials/Twitter.svg" class="otherSocialIcon"> </a>
-      <div class="Hspacer10">
-        <p></p>
-      </div>
-      <a href="https://mastodon.social/@doorhingeapps" class="otherFillButtons"> <img src="socials/Mastodon.svg" class="otherSocialIcon"> </a>
-      <div class="Hspacer10">
-        <p></p>
-      </div>
+    <div class="HStack"> 
       <a href="https://youtube.com/@doorhingeparkour" class="otherFillButtons"> <img src="socials/Youtube.svg" class="otherSocialIcon"> </a>
       <div class="Hspacer10">
         <p></p>
@@ -168,9 +161,11 @@
         </div>--> 
 
 <br>
-<div>
+	<br>
+	<div class="infoText">
   <h1 class="infoSubtextLeft"> Apps </h1>
 </div>
+	<br>
 <div class="infoText"> <br>
   <div class="hide-mobile">
     <div class="altHStack">
