Changed some wording

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <br>
 	<br>
 	<div class="infoText">
-  <h1 class="infoSubtextLeft"> Apps </h1>
+  <h1 class="infoSubtextLeft"> All Apps </h1>
 </div>
 	<br>
 <div class="infoText"> <br>
