More mobile updates

--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
 			</div>
 			<div class="show-mobile">
 				<div>
-					<div class="appsImageContainerMobile"> <img src="Images/Icons/DoorHinge Parkour Icon.png"
-							class="mobileAppsImage"> </div>
+					<!--<div class="appsImageContainerMobile"> <img src="Images/Icons/DoorHinge Parkour Icon.png"
+							class="mobileAppsImage"> </div>-->
 					<div class="mobileBannerContainter">
 						<h2 class="newReleaseBanner">Coming Soon</h2>
 						<div class="appInfo">
